@@ -43,7 +43,7 @@
  * Number of threads to run in the thread pool.  Should (roughly) match
  * the number of cores on your system.
  */
-#define NUMBER_OF_THREADS 4
+#define NUMBER_OF_THREADS 8
 
 /**
  * How many bytes of a file do we give to libmagic to determine the mime type?
@@ -362,9 +362,11 @@ update_directory ()
 					      rdc.buf,
 					      MHD_RESPMEM_MUST_FREE);
   mark_as_html (response);
+#if FORCE_CLOSE
   (void) MHD_add_response_header (response,
 				  MHD_HTTP_HEADER_CONNECTION,
 				  "close");
+#endif
   update_cached_response (response);
 }
 
@@ -775,7 +777,9 @@ generate_page (void *cls,
 	}
     }
   if (0 == strcmp (method, MHD_HTTP_METHOD_GET))
+  {
     return return_directory_response (connection);
+  }
 
   /* unexpected request, refuse */
   return MHD_queue_response (connection,
